added animations, made text responsive accross devices

--- a/home.html
+++ b/home.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/profile.css">
+    <link rel="stylesheet" href="assets/css/animations.css">
+
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -53,7 +55,10 @@
     <header class="header header-home">
         <div class="header__textbox">
             <h1 class="heading-text">
-                Light Up Your Romance
+                <span id="flickering-text">Light </span>
+                <span id="flickering-text">Up </span>
+                <span id="flickering-text">Your </span>
+                <span id="flickering-text">Romance</span>
             </h1>
 
             <a href="questions.html" target="_blank">
