--- a/media.html
+++ b/media.html
@@ -53,7 +53,7 @@
     <header class="header header-media">
         <div class="header__textbox">
             <h1 class="heading-text">
-                Coming Soon: Media Recommendations
+                Coming Soon: Media Recs
             </h1>
 
         </div>
@@ -107,4 +107,4 @@
 
 </body>
 
-</html>
+</html
