--- a/profile.html
+++ b/profile.html
@@ -52,16 +52,15 @@
 
         <section class="profile-box">
             <div class="row">
-                <div class="col 12s m6">
+                <div class="col s12 m6">
                     <!-- <img src="assets/images/profile/profile-pic/adventure-couple.jpg" class="profile__img"> -->
                 </div>
 
-                <div class="col 12s m6">
+                <div class="col s12 m6">
+                    <div class="profile__title">The Quirky Couple</div>
                     <div class="profile__text">
                         <p>
-
                             You're the quirky couple! You're not afraid to try new things together or take a romantic stroll off the beaten path. Whether you're at a tiki bar or a comics convention, you and your partner love to create new one-of-a-kind experiences together.
-
                         </p>
                         <br>
                         <a href="questions.html" target="_blank">
@@ -70,19 +69,15 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="profile__title">The Quirky Couple</div>
-            </div>
         </section>
 
-        <section class="favorites">
-            <div class="row">
-                <div class="section-heading">
-                    Your Favorites <i class="fas fa-grin-hearts"></i>
-                </div>
+        <div class="row">
+            <div class="section-heading">
+                Your Favorites <i class="fas fa-grin-hearts"></i>
             </div>
+        </div>
 
+        <section class="favorites">
             <div class="row">
 
                 <div class="col 12s m6">
