i created a copy of the quiz js + html (so i wouldn't accidentally mess up the original) i edited it so that the quiz result is saved to local storage. now the page will default to showing you options based on your saved profile! but there is no safeguard against a null (empty) local storage

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                 <span id="flickering-text">Romance</span>
             </h1>
 
-            <a href="questions.html" target="_blank">
+            <a href="quiz-fb.html" target="_blank">
                 <button class="btn btn-quiz">
                 Take The Quiz!
             </button>
