--- a/profile.html
+++ b/profile.html
@@ -64,10 +64,10 @@
                         </p>
                         <br>
 
-                        <a href="questions.html" target="_blank">
+                        <a href="quiz-fb.html" target="_blank">
                             <button class="waves-effect waves-light btn">Take the Quiz Again</button>
-                       
-              
+
+
                     </div>
                 </div>
             </div>
