--- a/quiz-fb.html
+++ b/quiz-fb.html
@@ -45,7 +45,7 @@
         </div>
         <footer></footer>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="./assets/js/questions.js"></script>
+        <script type="text/javascript" src="./assets/js/quiz-fb.js"></script>
 </body>
 
 
