created default settings for what will render if the user hasn't taken the quiz yet so that there are no errors

--- a/profile.html
+++ b/profile.html
@@ -28,6 +28,9 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/profile.css">
 
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -59,14 +62,13 @@
                 <div class="col s12 m6">
                     <div class="profile__title">The Quirky Couple</div>
                     <div class="profile__text">
-                        <p>
+                        <p id="profile-text">
                             You're the quirky couple! You're not afraid to try new things together or take a romantic stroll off the beaten path. Whether you're at a tiki bar or a comics convention, you and your partner love to create new one-of-a-kind experiences together.
                         </p>
                         <br>
 
                         <a href="quiz-fb.html" target="_blank">
                             <button class="waves-effect waves-light btn">Take the Quiz Again</button>
-
 
                     </div>
                 </div>
@@ -212,6 +214,9 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+
+    <!-- Javascript to dynamically change content-->
+    <script type="text/javascript" src="assets/js/profile.js"></script>
 </body>
 
 </html>
