--- a/index.html
+++ b/index.html
@@ -54,34 +54,23 @@
         </div>
     </section>
 
-    <div class="popup" id="signup">
-        <div class="popup__content">
-            <form action="/action_page.php" style="border:1px solid #ccc">
+    <div class="popup"class="modal" id="signup">
+        <div class="popup__content"id="modal-signup">
+            <form action="/action_page.php" id="signup-form" style="border:1px solid #ccc">
                 <div class="container">
                     <h1 class="signup-heading">Sign Up</h1>
                     <p>Welcome to your own personalized romantic advisor!</p>
                     <hr>
 
                     <label for="email"><b>Email</b></label>
-                    <input type="text" placeholder="Enter Email" name="email" required>
+                    <input type="text" placeholder="Enter Email" id="signup-email" name="email" required>
 
                     <label for="psw"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" required>
+                    <input type="password" placeholder="Enter Password" id="signup-password" name="psw" required>
 
-                    <label for="psw-repeat"><b>Repeat Password</b></label>
-                    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-                    <!-- 
-                    <label for="user-profile"><b>What type of couple are you?</b></label>
-                    <br>
-                    <select name="user-profile" class="user-profile" required>
-                        <option value="athletic">Athletic/Outdoorsy</option>
-                        <option value="foodie">Foodie</option>
-                        <option value="party">Party</option>
-                        <option value="quirky">Quirky</option>
-                        <option value="homebody">Homebody</option>
-                    </select>
-                    <br>
-                    <br>
+                    <!-- <label for="psw-repeat"><b>Repeat Password</b></label> -->
+                    <!-- <input type="password" placeholder="Repeat Password"  id="signup-password" name="psw-repeat" required> -->
+                   
      -->
                     <div class="clearfix">
                         <a href="#home">
@@ -128,7 +117,24 @@
 
         </div>
     </div>
+     <!-- Fire Base -->
+     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script> 
+     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script> -->
+     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script> -->
+   
 
+    <!-- A jax -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ 
+    <!-- Compiled and minified JavaScript -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
+  <!-- Js Link -->
+    <script src="assets/js/login.js">   </script>
 </body>
 
 </html>
