added revolving css cards on homepage

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/profile.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/animations.css">
 
 
@@ -77,6 +77,54 @@
             <h3 class="heading-secondary center-align">Plan Your Next Romantic Gesture <i class="fas fa-kiss-wink-heart gradient-text"></i></h3>
         </div>
 
+        <section class="features">
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="feature-card">
+                        <div class="card-side card-front card-front-1">
+                            <div class="card-front-text">
+                                Events
+                            </div>
+                        </div>
+                        <div class="card-side card-back card-back-1">
+                            <h3>Discover your city... together</h3>
+                            <p>Take your boo to see their favorite band play, or discover the trivia night you never knew was just down the road. We curate a selection of events happening near you so that you and your partner can go make memories together.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col s12 m4">
+                    <div class="feature-card">
+                        <div class="card-side card-front card-front-2">
+                            <div class="card-front-text">
+                                Restaurants
+                            </div>
+                        </div>
+                        <div class="card-side card-back card-back-2">
+                            <h3>You've got great taste</h3>
+                            <p>It's so easy to get stuck in a rut and show up at the same restaurant every week. It's boring but dependable. We offer you a list of local cuisines that fit your taste so you can try something new without the risk of disappointment.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col s12 m4">
+                    <div class="feature-card">
+                        <div class="card-side card-front card-front-3">
+                            <div class="card-front-text">
+                                Recipes
+                            </div>
+                        </div>
+                        <div class="card-side card-back card-back-3">
+                            <h3>The way to your love's heart is through their...</h3>
+                            <p>Sometimes the best date nights happen in the comfort of your own home. Find your next favorite recipe here -- and impress your boo with their own private dine-in experience.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="events">
             <div class="row">
                 <div class="section-heading">
@@ -94,7 +142,7 @@
         </section>
 
 
-        <section class="events">
+        <section class="restaurants">
             <div class="row">
                 <div class="section-heading">
                     Restaurants
