added a carousel to homepage

--- a/home.html
+++ b/home.html
@@ -22,6 +22,12 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
+
+
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/header.css">
@@ -32,6 +38,7 @@
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -125,6 +132,42 @@
             </div>
         </section>
 
+        <div class="row">
+            <h3 class="heading-secondary center-align">We curate dates tailored to your personality <i class="fas fa-grin-hearts gradient-text"></i></h3>
+        </div>
+
+        <section class="couple-types">
+            <div class="carousel-container">
+                <div class="carousel-slick">
+                    <div class="carousel-div">
+                        <img src="assets/images/home/carousel/athletic.jpg" alt="athletic couple" class="carousel-img">
+                        <h3 class="carousel-heading">The Athletic Couple</h3>
+                    </div>
+                    <div class="carousel-div">
+                        <img src="assets/images/home/carousel/foodie.jpg" alt="foodie couple" class="carousel-img">
+                        <h3 class="carousel-heading">The Foodie Couple</h3>
+                    </div>
+                    <div class="carousel-div">
+                        <img src="assets/images/home/carousel/homebody.jpg" alt="homebody couple" class="carousel-img">
+                        <h3 class="carousel-heading">The Homebody Couple</h3>
+                    </div>
+                    <div class="carousel-div">
+                        <img src="assets/images/home/carousel/party.jpg" alt="party couple" class="carousel-img">
+                        <h3 class="carousel-heading">The Party Couple</h3>
+                    </div>
+                    <div class="carousel-div">
+                        <img src="assets/images/home/carousel/quirky.jpg" alt="quirky couple" class="carousel-img">
+                        <h3 class="carousel-heading">The Quirky Couple</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="row">
+            <h3 class="heading-secondary center-align">A personalized feed of perfect dates <i class="fas fa-heart gradient-text"></i></h3>
+        </div>
+
+
         <section class="events">
             <div class="row">
                 <div class="section-heading">
@@ -198,6 +241,10 @@
 
     <!-- JS link -->
     <script src="assets/js/homepage-api.js"></script>
+
+    <!-- Slick JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script type="text/javascript" src="assets/js/slick.js"></script>
 </body>
 
 </html>
@@ -205,7 +252,7 @@
 
 
 
-
+<!-- HTML FOR CARDS -->
 
 <!-- <div class="col s6 m3">
                     <div class="card">
